syntax = "proto3";

package product;

option go_package = "gomicro/api/proto";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (Product) {}
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (Product) {}
  rpc UpdateProduct(UpdateProductRequest) returns (Product) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
}

message GetProductRequest {
  uint32 product_id = 1;
}

message GetProductsRequest {
  repeated uint32 product_ids = 1;
}

message GetProductsResponse {
  repeated Product products = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
}

message UpdateProductRequest {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
}

message DeleteProductRequest {
  uint32 id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

message Product {
  uint32 id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  int32 stock = 5;
} 